tests/ui/errors/snapshots/interpolate_pointer_newtype.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `Handle` cannot be interpolated
   ╭─[test.lis:5:6]
 4 │ fn show(h: Handle) -> string {
 5 │   f"{h}"
   ·      ┬
   ·      ╰── has no display form
 6 │ }
   ╰────
  help: Interpolate the inner value directly, or change the representation · code: [infer.interpolation_without_stringer]
