tests/ui/errors/snapshots/interpolate_struct_without_stringer.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `Point` cannot be interpolated
   ╭─[test.lis:6:6]
 5 │   let p = Point { x: 1, y: 2 }
 6 │   f"{p}"
   ·      ┬
   ·      ╰── has no display form
 7 │ }
   ╰────
  help: Mark `Point` with `#[display]`, or interpolate its fields directly · code: [infer.interpolation_without_stringer]
