tests/ui/errors/snapshots/iterable_on_generic_enum.snap
---
source: tests/ui/errors/mod.rs
---
  [error] `#[iterable]` on generic enum
   ╭─[test.lis:2:1]
 1 │ 
 2 │ #[iterable]
   · ─────┬─────
   ·      ╰── disallowed if enum has generics
 3 │ enum Cached<T> {
   ╰────
  help: Remove the generic type parameters, or drop `#[iterable]` · code: [attribute.iterable_generic_enum]
