tests/ui/errors/snapshots/iterable_on_impl_method.snap
---
source: tests/ui/errors/mod.rs
---
  [error] `#[iterable]` not on enum
   ╭─[test.lis:5:3]
 4 │ impl Widget {
 5 │   #[iterable]
   ·   ─────┬─────
   ·        ╰── not on an enum
 6 │   fn build() -> int {
   ╰────
  help: Only an enum can be marked `#[iterable]` · code: [attribute.iterable_not_an_enum]
