tests/ui/errors/snapshots/iterable_on_struct.snap
---
source: tests/ui/errors/mod.rs
---
  [error] `#[iterable]` not on enum
   ╭─[test.lis:2:1]
 1 │ 
 2 │ #[iterable]
   · ─────┬─────
   ·      ╰── not on an enum
 3 │ struct Point { x: int, y: int }
   ╰────
  help: Only an enum can be marked `#[iterable]` · code: [attribute.iterable_not_an_enum]
