tests/ui/errors/snapshots/iterable_on_struct_field.snap
---
source: tests/ui/errors/mod.rs
---
  [error] `#[iterable]` not on enum
   ╭─[test.lis:3:3]
 2 │ struct Config {
 3 │   #[iterable]
   ·   ─────┬─────
   ·        ╰── not on an enum
 4 │   value: int,
   ╰────
  help: Only an enum can be marked `#[iterable]` · code: [attribute.iterable_not_an_enum]
