tests/ui/errors/snapshots/iterable_variants_method_collision.snap
---
source: tests/ui/errors/mod.rs
---
  [error] `#[iterable]` conflicts with existing `variants`
   ╭─[test.lis:2:1]
 1 │ 
 2 │ #[iterable]
   · ─────┬─────
   ·      ╰── would synthesize `variants`
 3 │ enum Color {
   ╰────
    ╭─[test.lis:9:6]
  8 │ impl Color {
  9 │   fn variants() -> int {
    ·      ────┬───
    ·          ╰── `variants` already defined here
 10 │     0
    ╰────
  help: Rename the existing `variants`, or drop `#[iterable]` · code: [attribute.iterable_variants_conflict]
